2008-05-30  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #8554: installer doesn't check DB problems when creating admin user

2008-05-29  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #8270: hardcoded labels in title attributes of icons in top bar of BE interface (thanx to Stefano Kowalko)

2008-05-28  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #8522: Datetime shifts on copy and localize (timezone related)

2008-05-28  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8496: TCEforms: Help Icon is not in the docheader
	* Fixed bug #8504: help icon is not aligned in TCEform (Thanks to Steffen Kamper)
	* Fixed bug #8494: Admin Tools => DB Check => Find Filename has duplicate selectboxes

2008-05-27  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8412: typo3/file_edit.php replaces ###PATH### in the edited file with the value of $this->title (thanks to Andreas Wagner)

2008-05-25  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #4455: pid reset to 10000 in Constant Editor

2008-05-24  Ingo Renner  <ingo@typo3.org>

	* removed empty line at end of file in t3lib/thumbs.php

2008-05-21  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #7509: TypoScript Editor doesn't save changes in IE

2008-05-20  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8263: t3editor should not highlight decimals (thanks to Tobias Liebig)
	* Fixed bug #8049: Save button don't work when deactivating t3editor (thanks to Tobias Liebig)

2008-05-20  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #8445: Align group fields in TCEforms, credits Steffen Kamper
	* Fixed bug #8282: option-div is not styled in user-accesslist, credits Steffen Kamper

2008-05-20  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8460: Shortcutmenu needs a proper access check comment (thanks to Stefano Kowalke)
	* Fixed bug #8458: Backendsearchmenu needs a proper access check comment (thanks to Stefano Kowalke)
	* Fixed bug #8456: Browse Links does not use JS library interface
